add deployments logs to oapi
