# api/models/server/go/model_device.go
@@ -23,6 +23,8 @@ type Device struct {
 
 	Id string `json:"id"`
 
+	WorkspaceId string `json:"workspace_id,omitempty"`
+
 	Name string `json:"name"`
 
 	Hardware string `json:"hardware"`
