# api/models/server/go/model_group.go
@@ -19,6 +19,8 @@ type Group struct {
 
 	Id string `json:"id"`
 
+	WorkspaceId string `json:"workspace_id,omitempty"`
+
 	Name string `json:"name"`
 
 	Devices GroupDeviceList `json:"devices,omitempty"`
