# api/models/server/go/model_group_device.go
@@ -23,6 +23,8 @@ type GroupDevice struct {
 
 	Id string `json:"id"`
 
+	WorkspaceId string `json:"workspace_id,omitempty"`
+
 	Name string `json:"name"`
 
 	Hardware string `json:"hardware"`
